Update PokerGame.java